--- a/Tarea 1/Curriculum.html
+++ b/Tarea 1/Curriculum.html
@@ -11,6 +11,15 @@
         <h1>Curriculum</h1>
         <hr>
         <h2>Datos generales</h2>
+        <ul>
+           <il>Carnet:00011218</il>  
+           <il>Año de estudio: Segundo año</il> 
+           <il>Carrera: Ingenieria Informatica</il>
+           <il> Correo: 00011218@uca.edu.sv</il>
+           <il>GitHub: riveraalejandro1999</il>
+           
+           
+        </ul>
         <hr>
         <nav >
             <h2><b>Menu</b></h2>
