--- a/Tarea 1/Curriculum.html
+++ b/Tarea 1/Curriculum.html
@@ -12,13 +12,11 @@
         <hr>
         <h2>Datos generales</h2>
         <ul>
-           <il>Carnet:00011218</il>  
-           <il>Año de estudio: Segundo año</il> 
-           <il>Carrera: Ingenieria Informatica</il>
-           <il> Correo: 00011218@uca.edu.sv</il>
-           <il>GitHub: riveraalejandro1999</il>
-           
-           
+           <li>Carnet:00011218</li> 
+           <li>Año de estudio: Segundo año</li>
+           <li>Carrera: Ingenieria Informatica</li> 
+           <li> Correo: 00011218@uca.edu.sv</li> 
+           <li>GitHub: riveraalejandro1999</li>
         </ul>
         <hr>
         <nav >
@@ -31,5 +29,9 @@
         </nav>
         <hr>
         <h2>Perfil</h2>
+
 </body>
+<footer>
+    <p>Derechos de autor Alejandro Rivera</p>
+</footer>
 </html>
