--- a/Tarea 1/Curriculum.html
+++ b/Tarea 1/Curriculum.html
@@ -29,6 +29,7 @@
         </nav>
         <hr>
         <h2>Perfil</h2>
+        <p<>Mi nombre es Alejandro Enrique Rivera Vasquez naci el 2 de agosto de 1999 por lo cual tengo 20 años <br> me gradue de bachillerato general en el Colegio Salesiano Santa Cecilia y actualmente estudio <br> Ingeniera Informatica en la Uca y soy federado en Waterpolo pertenezco a la seleccion nacional. </p>
 
 </body>
 <footer>
