--- a/Tarea 1/Intereses y hobbies.html
+++ b/Tarea 1/Intereses y hobbies.html
@@ -21,7 +21,13 @@
         </nav>
         <hr>
         <h2>Intereses</h2>
+        <h3> Unos de mis hobbies principales es el Waterpolo </h3>
+        <embed src="./Waterpolo.mp4" width="640" height="480" autostart="1"></embed>
         <hr>
         <h2>Musica favoritra</h2>
+        <embed src="./Musica .mp4"width="640" height="480" autostart="1"></embed>
 </body>
+<footer>
+    <p>Derechos de autor Alejandro Rivera</p>
+</footer>
 </html>
