--- a/Laboratorio 3/Ejercicio 1/Ejercicio 1.html
+++ b/Laboratorio 3/Ejercicio 1/Ejercicio 1.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+ 
 </head>
 <body>
-    
+
+    <div id="example3">
+        <span class="one"></span>
+        <span class="two"></span>
+        <span class="three"></span>
+        <span class="four"></span>
+        <span class="five"></span>
+    </div>
+             
 </body>
 </html>
