--- a/Laboratorio 5/index.html
+++ b/Laboratorio 5/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="ejercicio01.js"></script>
     <script src="ejercicio02.js"></script>
+    <script src="ejercicio03.js"></script>
+    <script src="ejercicio04.js"></script>
+    <script src="ejercicio05.js"></script>
+    <script src="ejercicio06.js"></script>
+    <script src="ejercicio07.js"></script>
+    <script src="ejercicio08.js"></script>
+    <script src="ejercicio09.js"></script>
+    <script src="ejercicio10.js"></script>
+    
 </head>
 <body>
     
